# arxiv-paper-monitor-lambda

./: .gitignore  README.md  pyproject.toml
lambda/: pyproject.toml
lambda/src/: __init__.py  app.py
lambda/tests/: test_app.py  test_app_get_arxiv_papers.py  test_app_is_relevant_to_interest.py
