[tool.poetry]
name = "lambda"
version = "0.1.0"
description = "Lambda function for Slack arxiv app."
authors = ["Taketoshi <takekazusa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
slack-sdk = "^3.33.1"
arxiv = "^2.1.3"
openai = "^1.52.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
